added hero section

--- a/css/style.css
+++ b/css/style.css
@@ -46,11 +46,44 @@ ul li a{
     letter-spacing: 0px;
 }
 
-
-
-
-
-
-
-
 /* hero section code */
+.hero-container{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 133px;
+}
+/* .hero-content{
+
+} */
+.hero-title{
+    color: rgb(58, 58, 58);
+    font-size: 52px;
+    font-weight: 700;
+    line-height: 70px;
+    letter-spacing: 0px;
+}
+.hero-word{
+    color: rgb(58, 58, 58);
+    font-size: 16px;
+    font-weight: 600;
+    line-height: 24px;
+    letter-spacing: 0px;
+    margin: 18px 0;
+}
+.btn{
+    color: rgb(255, 255, 255);
+    font-family: Poppins;
+    font-size: 16px;
+    font-weight: 700;
+    line-height: 24px;
+    letter-spacing: 0px;
+    padding: 10px 24px;
+    border-radius: 41px;
+    background: rgb(224, 44, 109);
+    border: none;
+}
+.hero-img img{
+    width: 100%;
+    height: auto;
+}
