--- a/css/style.css
+++ b/css/style.css
@@ -10,14 +10,14 @@ body{
 .section-container{
     max-width: 1440px;
     margin: 0 auto;
-    padding: 50px 60px;
+    padding: 50px 160px;
 }
 
 /* navbar section code */
 header{
     max-width: 1440px;
     margin: 0 auto;
-    padding: 30px 60px;
+    padding: 30px 160px;
 }
 .navbar{
     display: flex;
@@ -131,8 +131,13 @@ ul li a{
     font-weight: 400;
     line-height: 150%;
     letter-spacing: 0%;
-    
+    margin: 10px 0;
 }
 .card-word{
-
+    color: rgb(120, 120, 133);
+    font-size: 14px;
+    font-weight: 700;
+    line-height: 143%;
+    letter-spacing: 1.8%;
+    margin-bottom: 6px;
 }
