create a about us section

--- a/css/style.css
+++ b/css/style.css
@@ -141,3 +141,33 @@ ul li a{
     letter-spacing: 1.8%;
     margin-bottom: 6px;
 }
+
+/* about-us section code */
+.about-container{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 96px;
+}
+.about-img img{
+    max-width: 404px;
+    max-height: 270px;
+    /* width: 100%; */
+    /* height: auto; */
+}
+.about-title{
+    color: rgb(10, 8, 38);
+    font-size: 38px;
+    font-weight: 700;
+    /* line-height: 60px;
+    letter-spacing: 0px; */
+
+}
+.about-text{
+    color: rgb(108, 108, 108);
+    font-size: 16px;
+    font-weight: 700;
+    line-height: 28px;
+    letter-spacing: 0px;
+    margin: 16px 0;
+}
