--- a/css/style.css
+++ b/css/style.css
@@ -171,3 +171,36 @@ ul li a{
     letter-spacing: 0px;
     margin: 16px 0;
 }
+
+/* footer section code */
+footer{
+    background: rgb(170, 170, 170);
+}
+.footer-container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    gap: 4px;
+}
+.footer-title{
+    color: rgb(255, 255, 255);
+    font-size: 24px;
+    font-weight: 700;
+    line-height: 36px;
+    letter-spacing: 0px;
+}
+.footer-text{
+     color: rgb(217, 219, 225);
+     font-size: 14px;
+     font-weight: 700;
+     line-height: 24px;
+     letter-spacing: 0%;
+}
+.footer-word{
+    color: rgb(217, 219, 225);
+    font-size: 14px;
+    font-weight: 700;
+    line-height: 24px;
+    letter-spacing: 0%;
+}
