create footer section

--- a/css/style.css
+++ b/css/style.css
@@ -118,7 +118,7 @@ ul li a{
 .card-content{
     padding: 10px;
 }
-.card-tite{
+.card-titel{
     color: rgb(24, 25, 31);
     font-size: 28px;
     font-weight: 500;
@@ -157,7 +157,7 @@ ul li a{
 }
 .about-title{
     color: rgb(10, 8, 38);
-    font-size: 38px;
+    font-size: 24px;
     font-weight: 700;
     /* line-height: 60px;
     letter-spacing: 0px; */
@@ -165,7 +165,7 @@ ul li a{
 }
 .about-text{
     color: rgb(108, 108, 108);
-    font-size: 16px;
+    font-size: 14px;
     font-weight: 700;
     line-height: 28px;
     letter-spacing: 0px;
@@ -174,7 +174,7 @@ ul li a{
 
 /* footer section code */
 footer{
-    background: rgb(170, 170, 170);
+    background-color: rgba(0, 0, 128, 0.824);
 }
 .footer-container{
     display: flex;
