--- a/css/style.css
+++ b/css/style.css
@@ -204,3 +204,34 @@ footer{
     line-height: 24px;
     letter-spacing: 0%;
 }
+
+/* Responsive mobil device */
+@media screen and (max-width: 576px){
+    .section-container{
+        padding: 10px 50px;
+    }
+    header{
+        padding: 10px 50px;
+    }
+    ul{
+        display: none;
+    }
+    .hero-container,
+    .about-container
+    {
+        flex-direction: column;
+    }
+    .about-container{
+        flex-wrap: wrap-reverse;
+    }
+    .about-img img{
+       width: 100%;
+       height: auto;
+    }
+    .card-container{
+        grid-template-columns: repeat(1, 1fr);
+    }
+    .footer-container{
+        align-items: center;
+    }
+}
